CSS design implemented

--- a/index.html
+++ b/index.html
@@ -9,22 +9,29 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@300;400;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Crete+Round:ital@0;1&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Alegreya:ital@0;1&display=swap" rel="stylesheet">
 
 </head>
 <body>
 
     <video autoplay>
-        <source src="./src/video1.mp4" type="video/mp4">
+        <source src="./src/video.mp4" type="video/mp4">
     </video>
 
 
     <main>
-        <h1>Cristina's Just-in-Time Donuts</h1>
-        <p>All donuts 0.50€ each, cake or glazed!</p>
+        <h1>Do-nuts Just-in-Time</h1>
+        <p>All donuts <span>0.50€ each</span>, cake or glazed!</p>
 
         <form name="orderform" action="donuts.php" method="POST">
-            <div class="image">FOTO</div>
+            
+            <div>
+                <img src="./src/donut-clock.png" alt="donut clock image">
+            </div>
+            
 
             <div class="form-info">
                 <div class="inputbox">
