--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Crete+Round:ital@0;1&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Alegreya:ital@0;1&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/c8859f7b0c.js" crossorigin="anonymous"></script>
 
 </head>
 <body>
@@ -75,6 +76,17 @@
 
 
     </main>
+    
+
+    <footer>
+        <p>© Coded by <a href="https://cristina-padilla-codes.netlify.app/"
+                target="_blank">Cristina Padilla</a>
+            <a href="https://github.com/Mama-simba/css-positioning-documentation" target="_blank"><i
+                    class="fab fa-github-square"></i></a>
+            <a href="https://www.linkedin.com/in/cristina-padilla-plasencia/" target="_blank"><i
+                    class="fab fa-linkedin"></i></a>
+        </p>
+    </footer>
     
 </body>
 </html>
